Fix the opened `.sidebar-toggle` position on small screens (#584)

--- a/assets/less/toggle.less
+++ b/assets/less/toggle.less
@@ -36,7 +36,7 @@
   .sidebar-opened {
     .sidebar-toggle {
       left: 18px;
-      top: 8px;
+      top: 5px;
     }
   }
 }
